# sfi-server

./: Cargo.toml  README.md
src/: main.rs  state.rs  static_files.rs
src/api/: mod.rs  v1.rs
src/api/v1/: authentication.rs  authorization.rs  client_events.rs  middleware.rs  mod.rs  server_events.rs  types.rs
src/constants/: license.rs  meta.rs
