[package]
name = "sfi-server"
version = "0.0.0"
authors = ["Bernd-L <git@bernd.pw>"]
edition = "2018"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Bernd-L/sfi-server"
homepage = "https://github.com/Bernd-L/sfi-server#readme"
readme = "README.md"
documentation = "https://docs.rs/sfi-server"
description = "Manage shared food inventories (backend server)"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Core libs
sfi-core = { path = "../sfi-core", version = "0" }
libocc = { path = "../libocc-rs", version = "0.4" }

# Actix
actix-web = "3"
actix-files = "0.5.0"

# Serde
serde = "1"
serde_derive = "1"
serde_json = "1"

# Other dependencies
chrono = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
anyhow = "1.0.38"
